--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <h4>SRI MEDHA V JUNIOR COLLEGE ,Hyderabad</h4>
                 <p>Senior Secondary Education, 12th Board</p>
             </li>
-            <li>BHASHYAM HIGH SCHOOL , Proddatur</li>
+            <h4>BHASHYAM HIGH SCHOOL , Proddatur</h4>
             <p>Secondary Education, 10th Board</p>
         </ul>
 
