--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <h1>Ganesh Siddhartha</h1>
 <p>Tel: +123456789</p>
-<a href="wakeupsid036@gmail.com">mailme</a>
+<a href = "mailto: wakeupsid036@gmail.com">SendEmail</a>
 <p>Address: C-4024,Brigade Meadows,Bangalore</p>
 <a href="https://www.linkedin.com/in/ganesh-siddhartha-vankadara-bb6a03205?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BpOBkJACDQgedRaaEB%2FXJXQ%3D%3D">linkedin
 </a>
