--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <img src="picture.jpg" alt="Profile photo" width="300" height="300">
 
         <hr>
-        <h2>PROJECTS & RESEARCH PUBLICATIONS:-</h2>
+        <h2> PROJECTS & RESEARCH PUBLICATIONS :-</h2>
         <ul>
-            <li>Evidence Collection Application</li>
-        <p>An Application Designed to secretly collect and
+            <li> Evidence Collection Application </li>
+        <p> An Application Designed to secretly collect and
             preserve evidence using gestures and further on can save into the cloud as well immediately.</p>
 
             <li>CRUD - Serverless API USING AWS</li>
-            <p>The API was designed to provide a scalalable&cost-effective solution for
+            <p> The API was designed to provide a scalalable&cost-effective solution for
                 managing data in a serverless environment.</p>
                 </ul>
 
@@ -38,14 +38,14 @@
             </li>
                 <ul>
                     <li>
-                    <h5>Personal Relations CO-Ordinator Jan 2022 to Aug 2022 </h5>
+                    <h5>Personal Relations Co-Ordinator Jan 2022 to Aug 2022 </h5>
                     </li>
                     <ul>
                 <li>Responsible for leading cross-functional teams to develop and execute effective marketing and combining group
                     efforts to achieve goals.</li>
 
                 <li>
- <h4>Icode</h4>
+  <h4>Icode</h4>
                 </li>
                 <ul>
                     <li>
@@ -60,7 +60,7 @@
                 </li>
                 <ul>
                     <h5>
-         <li>TREASURER-Cyper Club</li>
+         <li>Treasurer-Cyper Club</li>
                     </h5>
                     <ul>
     <li>Budgeting, Fundraising, Collaboration&Communication within the club as well as several organizations to
