--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 
         </ul>
 
-        <h2>Education:</h2>
+        <h2> Education:</h2>
 
         <ul>
             <Li>
-                <h4>Jain University, Bangalore</h4>
-                <p>B.Tech. in Computer Science & Engineering - Cloud Technology and Information Security</p>
+                <h4> Jain University, Bangalore</h4>
+                <p>B.Tech. in Computer Science & Engineering - Cloud Technology and Information Security(CTIS)</p>
             </Li>
             <li>
                 <h4>SRI MEDHA V JUNIOR COLLEGE ,Hyderabad</h4>
