--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <li>Analytical Thinking</li>
             <li>Performance Evaluations</li>
             <li>Customer Service, Support & Relations</li>
-            <li>Python, XML, JavaScript,Java, C/C++, HTML, CSS</li>
+            <li>Python, XML, JavaScript,Java, C/C++, HTML, CSS, React JS</li>
         </ul>
 
         <h2>Professional Attributes:</h2>
